--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-model-openai</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-azure-openai</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
