--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_UNAME}
-#spring.datasource.password=${DB_PASS}
+spring.datasource.password=${DB_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.flyway.enabled=false
@@ -21,5 +21,10 @@ spring.ai.openai.chat.options.model=gpt-4o
 spring.ai.openai.chat.options.temperature=0.7
 spring.ai.openai.chat.options.maxCompletionTokens=2000
 
+spring.ai.azure.openai.api-key=${OPENAI_AZURE_API_KEY}
+spring.ai.azure.openai.endpoint=${AZURE_GPT_ENDPOINT}
+spring.ai.azure.openai.chat.options.deployment-name=${AZURE_DEP_NAME}
+spring.ai.azure.openai.chat.options.temperature=0.7
+spring.ai.azure.openai.chat.options.max-tokens=2000
 
 
