Added dall-e integration in TestChatController, created ImageGenerationService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,6 @@ spring.ai.azure.openai.endpoint=${AZURE_GPT_ENDPOINT}
 spring.ai.azure.openai.chat.options.deployment-name=${AZURE_DEP_NAME}
 spring.ai.azure.openai.chat.options.temperature=0.7
 spring.ai.azure.openai.chat.options.max-tokens=2000
+ai.azure.openai.api.version=${API_VERSION}
 
 
